--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
     <script src="bower_components/angular-resource/angular-resource.min.js"></script>
     <script src="bower_components/angular-local-storage/dist/angular-local-storage.min.js"></script>
     <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
+    <script src="bower_components/ng-file-upload/ng-file-upload.js"></script>
 
     <!-- AngularJS CoreUI App scripts -->
 
