Updates to project tracker

--- a/features/common/sidebar-nav.html
+++ b/features/common/sidebar-nav.html
@@ -5,6 +5,9 @@
                 NAVIGATION
             </li>
             <li class="nav-item">
+                <a class="nav-link" ui-sref-active="active" ui-sref="app.projects"><i class="fa fa-code"></i> Projects</a>
+            </li>
+            <li class="nav-item">
                 <a class="nav-link" ui-sref-active="active" ui-sref="app.reports.roster"><i class="fa fa-anchor"></i> Roster</a>
             </li>
             <li class="nav-item nav-dropdown">
