--- a/features/projects/projects.html
+++ b/features/projects/projects.html
@@ -3,11 +3,11 @@
         <project-list></project-list>
     </div>
     <div class="col-lg-8" style="padding-left:0px !important;padding-right:0px !important;">
-        <div class="card">
+        <div class="card" style="height:87vh;overflow-y:scroll;">
             <div class="container">
                 <div class='card-block'>
                     <ui-view>
-                        <task-list>
+                        <your-projects></your-projects>
                     </ui-view>
                 </div>
             </div>
