Implemented quiz editor

--- a/features/common/sidebar-nav.html
+++ b/features/common/sidebar-nav.html
@@ -17,7 +17,7 @@
                         <a class="nav-link" href="https://training.n57.net" target="_blank"><i class="fa fa-minus"></i> Technical Training</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="http://quiz.n57.net" target="_blank"><i class="fa fa-minus"></i> Quiz Platform</a>
+                        <a class="nav-link" ui-sref-active="active" ui-sref="app.quiz"><i class="fa fa-minus"></i> Quiz Platform</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="http://www.navybmr.com/active-duty/ctn/" target="_blank"><i class="fa fa-minus"></i> AiR Bibs</a>
